--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md/about",
-	"isDesktopOnly": false
+  "id": "obsidian-code-plugin",
+  "name": "Code",
+  "version": "0.0.1",
+  "minAppVersion": "0.9.12",
+  "description": "Code hint, code snippet, execute code, format code, copy button and generate code pictures.",
+  "author": "He Zhang",
+  "authorUrl": "https://ob-code.zhanghe.cool/",
+  "isDesktopOnly": false
 }
