--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "obsidian-code-plugin",
-  "version": "0.0.11",
+  "name": "obsidian-mangoflow-plugin",
+  "version": "0.0.12",
   "description": "Code hint, code snippet, execute code, format code, copy button and generate code pictures. (https://ob-code.zhanghe.cool)",
   "main": "main.js",
   "scripts": {
@@ -11,18 +11,19 @@
     "code",
     "snippet",
     "hint",
-    "execute"
+    "execute",
+    "AI"
   ],
-  "author": "",
+  "author": "Mangoflow.chat",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-commonjs": "^18.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/node": "^14.14.37",
-    "obsidian": "^0.12.0",
-    "rollup": "^2.32.1",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "@rollup/plugin-typescript": "^8.5.0",
+    "@types/node": "^14.18.63",
+    "obsidian": "^0.12.17",
+    "rollup": "^2.79.1",
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.5"
   }
 }
